# eq-service

./: .gitignore  Cargo.toml  README.md  justfile
blob-tool/: Cargo.toml
blob-tool/src/: main.rs
common/: Cargo.toml
common/src/: error.rs  lib.rs
elf/: riscv32im-succinct-zkvm-elf
program-keccak-inclusion/: Cargo.toml
program-keccak-inclusion/src/: main.rs
proto/: eqservice.proto
runner-keccak-inclusion/: Cargo.toml  build.rs  proof_input.json
runner-keccak-inclusion/src/: main.rs
service/: Cargo.toml  build.rs
service/proto/: eqservice.proto
service/src/: main.rs  utils.rs
src/: README.md  main.rs  utils.rs  zkproofs.rs
static/: index.html
