[package]
name = "eq-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-files = "0.6.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"] }
celestia-types = "0.4.0"
# sp1-sdk = "1.2.0"
hex = "0.4.3"
rand = "0.8.5"
tokio = "1.40.0"