[package]
name = "eq-service"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"] }
celestia-types = {git="https://github.com/eigerco/lumina.git"}
celestia-rpc = {git="https://github.com/eigerco/lumina.git"}
tonic = "*"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "*"