[workspace]
members = ["service", "program-keccak-inclusion", "common", "blob-tool", "runner-keccak-inclusion"]
resolver = "2"

[workspace.dependencies]
celestia-types = {git="https://github.com/eigerco/lumina.git"}
celestia-rpc = {git="https://github.com/eigerco/lumina.git"}
nmt-rs = "*"
sp1-zkvm = {version="4.0.1", features=["verify"]}
sp1-sdk = {version="4.0.1"}
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
sha3 = "0.10.8"
tendermint-proto = "*"
tendermint = "*"
bincode = "1.3.3"
clap = {version="4.5.18", features=["derive"]}
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
hex = "0.4.3"
tonic = "*"
tonic-build = "*"
serde_json = "1.0.135"
thiserror = "2.0.11"

[patch.crates-io]
sha3-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", branch = "patch-sha3-v0.10.8" }
sha2-v0-9-9 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.9.9-sp1-4.0.0" }
sha2-v0-10-6 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.6-sp1-4.0.0" }
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-4.0.0" }
curve25519-dalek = { git = "https://github.com/sp1-patches/curve25519-dalek", tag = "patch-4.1.3-sp1-4.0.0" }
curve25519-dalek-ng = { git = "https://github.com/sp1-patches/curve25519-dalek-ng", tag = "patch-4.1.1-sp1-4.0.0" }