[package]
name = "eq-program-keccak-inclusion"
version = "0.1.0"
edition = "2021"

[dependencies]
eq-common = {path = "../common"}
sp1-zkvm = {workspace = true}
celestia-types = {workspace = true}
nmt-rs = "*"
tendermint = {workspace = true}
tendermint-proto = {workspace = true}
sha3 = {workspace = true}
bincode = {workspace = true}