[package]
name = "eq-service"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"] }
celestia-types = {workspace = true}
celestia-rpc = {workspace = true}
nmt-rs = {workspace = true}
tonic = "*"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tendermint-proto = "*"
tendermint = "*"
rkyv = "0.8.9"
sled = "0.34.7"
clap = {version="4.5.18", features=["derive"]}
eq-common = {path = "../common"}

[build-dependencies]
tonic-build = "*"