[package]
name = "eq-service"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = {workspace = true}
uuid = { version = "0.8", features = ["v4"] }
celestia-types = {workspace = true}
celestia-rpc = {workspace = true}
nmt-rs = {workspace = true}
prost = "0.13"
tokio = {workspace = true}
tonic = {workspace = true}
tendermint-proto = {workspace = true}
tendermint = {workspace = true}
rkyv = "0.8.9"
sled = "0.34.7"
eq-common = {path = "../common"}
clap = {workspace = true}
sp1-sdk = {workspace=true}
sha3 = {workspace=true}

[build-dependencies]
tonic-build = {workspace = true}